acvus-mir-test/tests/snapshots/all__e2e__arithmetic_to_string.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @a
     3 |   r3 = fetch @b
     5 |   assign <template> = T0
     6 |   r4 = r2 + r3
     7 |   assign out = r4
     8 |   r5 = ref &out
     9 |   r6 = call #0(r5)
    10 |   r7 = ref &mut <template>
    11 |   append r7 r6
    12 |   r8 = take <template>
    13 |   commit @a = r2 (not written)
    14 |   commit @b = r3 (not written)
    15 |   return r8

    ; r0 (v17) : i64
    ; r1 (v18) : i64
    ; r2 (@a) : i64
    ; r3 (@b) : i64
    ; r4 (v9) : i64
    ; r5 (out.) : &i64
    ; r6 (to_string(...)) : String
    ; r7 (<template>.) : &mut String
    ; r8 (v14) : String
    ; r9 (@b) : i64
    ; r10 (<template>) : String
    ; r11 (@a) : i64
    ; r12 (v15) : i64
    ; r13 (@a) : i64
    ; r14 (out) : i64
    ; r15 (v5) : String
    ; r16 (v16) : i64
    ; r17 (@b) : i64
