acvus-mir-test/tests/snapshots/all__e2e__builtin_all.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   assign <template> = T0
     5 |   r3 = array_begin capacity=0
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   assign out = r7
    11 |   r8 = ref &out
    12 |   r9 = call #3(r8)
    13 |   r10 = ref &mut <template>
    14 |   append r10 r9
    15 |   r11 = take <template>
    16 |   commit @items = r4
    17 |   return r11

    ; r0 (v19) : Vec<i64>
    ; r1 (v20) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v7) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (into_iter(...)) : Items<i64>
    ; r6 (v11) : Fn(&i64) -> Bool
    ; r7 (all(...)) : Bool
    ; r8 (out.) : &Bool
    ; r9 (to_string(...)) : String
    ; r10 (<template>.) : &mut String
    ; r11 (v17) : String
    ; r12 (v3) : String
    ; r13 (items) : Vec<i64>
    ; r14 (items) : Vec<i64>
    ; r15 (@items) : Vec<i64>
    ; r16 (<template>) : String
    ; r17 (v18) : Vec<i64>
    ; r18 (out) : Bool
    ; r19 (@items) : Vec<i64>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 0 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (x) : &i64
    ; r6 (x) : &i64
