acvus-mir-test/tests/snapshots/all__e2e__builtin_any.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1337
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   assign out = r7
    12 |   r8 = ref &out
    13 |   r9 = call #3(r8)
    14 |   r10 = string_concat [T0, T0, T0, r9]
    15 |   commit @items = r4
    16 |   return r10

    ; r0 (v19) : Vec<i64>
    ; r1 (v20) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v6) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (v10) : Iterator<i64, Pure>
    ; r6 (v11) : Fn(&i64) -> Bool
    ; r7 (any(...)) : Bool
    ; r8 (out.) : &Bool
    ; r9 (to_string(...)) : String
    ; r10 (v17) : String
    ; r11 (@items) : Vec<i64>
    ; r12 (v14) : String
    ; r13 (items) : Vec<i64>
    ; r14 (@items) : Vec<i64>
    ; r15 (items) : Vec<i64>
    ; r16 (v18) : Vec<i64>
    ; r17 (out) : Bool
    ; r18 (v5) : String
    ; r19 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 10 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (x) : &i64
    ; r6 (x) : &i64
