acvus-mir-test/tests/snapshots/all__e2e__builtin_find.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1298
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "none"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   assign out = r7
    12 | L2:
    13 |   r8 = ref &out
    14 |   r9 = test r8 is Some
    15 |   jump_if r9 then L3 else L1
    16 | L3:
    17 |   r10 = take out.payload
    18 |   assign v = r10
    19 |   r11 = ref &v
    20 |   r12 = call #3(r11)
    21 |   r13 = string_concat [r12]
    22 |   jump L0(r13)
    23 | L1:
    24 |   r14 = const_str T1
    25 |   r15 = string_concat [r14]
    26 |   jump L0(r15)
    27 | L0(r16: String):
    28 |   r17 = string_concat [T0, T0, T0, r16]
    29 |   commit @items = r4
    30 |   return r17

    ; r0 (v27) : Vec<i64>
    ; r1 (v28) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v6) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (v10) : Iterator<i64, Pure>
    ; r6 (v11) : Fn(&i64) -> Bool
    ; r7 (find(...)) : Option<i64>
    ; r8 (out.) : &Option<i64>
    ; r9 (v16) : Bool
    ; r10 (v) : i64
    ; r11 (v.) : &i64
    ; r12 (to_string(...)) : String
    ; r13 (v21) : String
    ; r14 (v22) : &str
    ; r15 (v23) : String
    ; r16 (v24) : String
    ; r17 (v25) : String
    ; r18 (@items) : Vec<i64>
    ; r19 (items) : Vec<i64>
    ; r20 (v30) : Vec<i64>
    ; r21 (v14) : String
    ; r22 (@items) : Vec<i64>
    ; r23 (items) : Vec<i64>
    ; r24 (v) : i64
    ; r25 (v5) : String
    ; r26 (v8) : String
    ; r27 (v26) : Vec<i64>
    ; r28 (v29) : Vec<i64>
    ; r29 (out) : Option<i64>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 10 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (x) : &i64
    ; r6 (x) : &i64
