acvus-mir-test/tests/snapshots/all__e2e__builtin_fold.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1324
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     9 |   r6 = closure L0 []
    10 |   r7 = call #2(r5, 0 (r8), r6)
    11 |   assign out = r7
    13 |   r9 = ref &out
    14 |   r10 = call #3(r9)
    15 |   r11 = string_concat [T0, T0, T0, r10]
    16 |   commit @items = r4
    17 |   return r11

    ; r0 (v20) : Vec<i64>
    ; r1 (v21) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v6) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (v10) : Iterator<i64, Pure>
    ; r6 (v12) : Fn(i64, i64) -> i64
    ; r7 (fold(...)) : i64
    ; r8 (v11) : i64
    ; r9 (out.) : &i64
    ; r10 (to_string(...)) : String
    ; r11 (v18) : String
    ; r12 (@items) : Vec<i64>
    ; r13 (out) : i64
    ; r14 (items) : Vec<i64>
    ; r15 (@items) : Vec<i64>
    ; r16 (v15) : String
    ; r17 (v5) : String
    ; r18 (items) : Vec<i64>
    ; r19 (v8) : String
    ; r20 (v19) : Vec<i64>

=== closure L0 (ValueId(0), ValueId(1)) ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = r3 + r4
     3 |   return r2

    ; r0 (v8) : i64
    ; r1 (v9) : i64
    ; r2 (v7) : i64
    ; r3 (v1) : i64
    ; r4 (v2) : i64
    ; r5 (acc) : i64
    ; r6 (x) : i64
    ; r7 (acc) : i64
    ; r8 (x) : i64
