acvus-mir-test/tests/snapshots/all__e2e__builtin_join.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ", "

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @names
     4 |   assign <template> = T0
     5 |   r3 = array_begin capacity=0
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = const_str T1
     9 |   r7 = call #2(r6)
    10 |   r8 = call #3(r5, r7)
    11 |   r9 = ref &mut <template>
    12 |   append r9 r8
    13 |   r10 = take <template>
    14 |   commit @names = r4
    15 |   return r10

    ; r0 (v17) : Vec<String>
    ; r1 (v18) : Vec<String>
    ; r2 (@names) : Vec<String>
    ; r3 (v7) : Array<String, 0>
    ; r4 (vec(...)) : Vec<String>
    ; r5 (into_iter(...)) : Items<String>
    ; r6 (v11) : &str
    ; r7 (to_string(...)) : String
    ; r8 (join(...)) : String
    ; r9 (<template>.) : &mut String
    ; r10 (v15) : String
    ; r11 (v3) : String
    ; r12 (names) : Vec<String>
    ; r13 (names) : Vec<String>
    ; r14 (@names) : Vec<String>
    ; r15 (<template>) : String
    ; r16 (@names) : Vec<String>
    ; r17 (v16) : Vec<String>
