acvus-mir-test/tests/snapshots/all__e2e__builtin_len.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @items
     3 |   assign <template> = T0
     4 |   assign items = r1
     5 |   r2 = array_begin capacity=0
     6 |   r3 = call #0(r2)
     7 |   r4 = ref &items
     8 |   r5 = call #1(r4)
     9 |   assign out = r5
    10 |   r6 = ref &out
    11 |   r7 = call #2(r6)
    12 |   r8 = ref &mut <template>
    13 |   append r8 r7
    14 |   r9 = take <template>
    15 |   commit @items = r3
    16 |   return r9

    ; r0 (v17) : Vec<i64>
    ; r1 (@items) : Vec<i64>
    ; r2 (v7) : Array<i64, 0>
    ; r3 (vec(...)) : Vec<i64>
    ; r4 (items.) : &Vec<i64>
    ; r5 (len(...)) : u64
    ; r6 (out.) : &u64
    ; r7 (to_string(...)) : String
    ; r8 (<template>.) : &mut String
    ; r9 (v15) : String
    ; r10 (v3) : String
    ; r11 (out) : u64
    ; r12 (items) : Vec<i64>
    ; r13 (@items) : Vec<i64>
    ; r14 (<template>) : String
    ; r15 (@items) : Vec<i64>
    ; r16 (v16) : Vec<i64>
